# function-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  kfunction.h
kfunction/: CMakeLists.txt  main.cpp
kfunction/include/: kfunction.h
project/: CMakeLists.txt  main.cpp
project/include/: Function.h
project/src/: Function.cpp
tests/: CMakeLists.txt  class_tester.cpp  main.cpp  test_classes.h  test_functions.h  test_types.h  testfunction.cpp  testfunction.h  tst_operations.h  tst_sign.h
